--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,6 +14,26 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    Chun Yin, Jiahang Liu, \Shaoqing, Bindong Sun.(2024).
+    Mixed land use has opposite associations with subjective well-being through social capital: Spatial heterogeneity in residential and workplace neighborhoods.
+    \textit{Travel Behaviour and Society}.\textit{35}, 100724.
+    \DOI{10.1016/j.tbs.2023.100724}. [SSCI, IF = 5.2].
+\item
+    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou.(2024).
+    Local carbon emission zone construction in the highly urbanized regions: Application of residential and transport CO$_2$ emissions in Shanghai, China.
+    \textit{Building and Environment}.\textit{247}, 111007.
+    \DOI{10.1016/j.buildenv.2023.111007}. [SCI, IF = 7.4].
+\item
+    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia. (2023).
+    Assessing Spatiotemporal Bikeability Using Multi-Source Geospatial Big Data: A Case Study of Xiamen, China.
+    \textit{International Journal of Applied Earth Observation and Geoinformation}. \textit{125}, 103539.
+    \DOI{10.1016/j.jag.2023.103539}. [SCI, IF = 7.5].
+\item
+    Shujuan Yang, Bin Yu, Wanqi Yu, \Shaoqing, Chuanteng Feng, Ying Shao,Xing Zhao, Xiaoqing Li, Tianjing He, Peng Jia. (2023).
+    Development and validation of an age-sex-ethnicity-specific metabolic syndrome score in the Chinese adults.
+    \textit{Nature Communications}. \textit{14}(1), 6988.
+    \DOI{10.1038/s41467-023-42423-y}. [SCI, IF = 16.6].
+\item
     Peng Jia, Yuanyuan Shi, Qi Jiang, \Shaoqing,Bin Yu, Shuhan Yang, Ge Qiu, Shujuan Yang. (2023).
     Environmental determinants of childhood obesity: a meta-analysis.
     \textit{The Lancet Global Health}. \textit{11}, S7.
@@ -77,7 +97,7 @@
     {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙. (2020).
     春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
     \textit{上海城市规划}. \textit{05}, 22-29.
-    \DOI{10.11982/j.supr.20200504}. [北大核心, 复合影响因子 = 1.919] 
+    \DOI{10.11982/j.supr.20200504}. [北大核心, 复合影响因子 = 2.219] 
 \item
     Peng Jia, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou. (2020).
     Natural environment and childhood obesity: A systematic review.
@@ -122,7 +142,7 @@
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
     {\songtix{环境科学学报}}. \textit{39}(7), 2398-2409.
-    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子 = 3.139] 
+    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子 = 3.417] 
 \item
     Qing Yang, Tianyue Huang, Saige Wang, Jiashuo Li, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng. (2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
@@ -142,12 +162,12 @@
     Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
-    \DOI{10.3390/ijerph15102175}. [SSCI, IF = 4.614].
+    \DOI{10.3390/ijerph15102175}. [EI, Citescore = 5.4].
 \item
     {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
 	H市城区步行环境对两抢一盗警情的影响.
     {\songtix{地理科学}}.  \textit{38}(8), 1235-1244.
-    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子 = 6.524]
+    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子 = 7.367]
 \item
     Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
@@ -157,7 +177,7 @@
     叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2018).
 	不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
     {\songtix{中国人口·资源与环境}}. \textit{28}(02), 115-122.
-    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子 = 7.598]
+    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子 = 8.421]
 \item
     Qin Ye, \Shaoqing, Gang Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
@@ -167,7 +187,7 @@
    李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江. (2016).
 	基于政府大数据的北京城市空间发展模式分析.
     {\songtix{地理信息世界}}. \textit{23}(3), 20-26.
-    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子 = 1.391]
+    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子 = 1.099]
 %\end{etaremune}
 \end{enumerate}
 
@@ -287,31 +307,21 @@
     \Shaoqing, Alfred Stein, Yuchen Li, Shujuan Yang, Peng Jia.
     Street view imagery for built environment auditing: a systematic review.
     \textit{International Journal of Geographical Information Science}. 
-    (\Revision).
-\item
-    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia.
-    Assessing Spatiotemporal Bikeability Using Multi-Source Geospatial Big Data: A Case Study of Xiamen, China.
-    \textit{International Journal of Applied Earth Observation and Geoinformation}. 
     (\Review).
 \item
     \Shaoqing, Frank Badu Osei, Peng Jia, Alfred Stein.
     Mapping of hourly street-level PM2.5 concentrations using an ensemble-random forest model and multi-source geospatial data.
-    \textit{Environmental Science \& Technology}. 
+    \textit{Environment International}. 
     (\Submitted).
 \item
     Xiaoman Zheng, \Shaoqing, Qi Chen, Kim Calders, Chengdong Xu, Xiaohua Wei, Mazhan Zhuang, Yin Ren.
     Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
-    \textit{}. 
+    \textit{Remote Sensing in Ecology and Conservation}. 
     (\Revision).
 \item
     Peng Jia, Tong Wu, \Shaoqing, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu,  Jing Su, Gordon G. Liu, Shujuan Yang.
     Impacts of and vulnerability to the COVID-19 pandemic.
-    \textit{}. 
+    \textit{Landscape Ecology}. 
     (\Submitted).
-\item
-    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou.
-    Local carbon emission zone construction in the highly urbanized regions: Application of residential and transport CO$_2$ emissions in Shanghai, China.
-    \textit{Building and Environment}.
-    (\Review). 
 %\end{etaremune}
 \end{enumerate}
