--- a/publications.tex
+++ b/publications.tex
@@ -13,6 +13,26 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    Chun Yin, Jiahang Liu, \Shaoqing, Bindong Sun.(2024).
+    Mixed land use has opposite associations with subjective well-being through social capital: Spatial heterogeneity in residential and workplace neighborhoods.
+    \textit{Travel Behaviour and Society}.\textit{35}, 100724.
+    \DOI{10.1016/j.tbs.2023.100724}. [SSCI, IF = 5.2].
+\item
+    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou.(2024).
+    Local carbon emission zone construction in the highly urbanized regions: Application of residential and transport CO$_2$ emissions in Shanghai, China.
+    \textit{Building and Environment}.\textit{247}, 111007.
+    \DOI{10.1016/j.buildenv.2023.111007}. [SCI, IF = 7.4].
+\item
+    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia. (2023).
+    Assessing Spatiotemporal Bikeability Using Multi-Source Geospatial Big Data: A Case Study of Xiamen, China.
+    \textit{International Journal of Applied Earth Observation and Geoinformation}. \textit{125}, 103539.
+    \DOI{10.1016/j.jag.2023.103539}. [SCI, IF = 7.5].
+\item
+    Shujuan Yang, Bin Yu, Wanqi Yu, \Shaoqing, Chuanteng Feng, Ying Shao,Xing Zhao, Xiaoqing Li, Tianjing He, Peng Jia. (2023).
+    Development and validation of an age-sex-ethnicity-specific metabolic syndrome score in the Chinese adults.
+    \textit{Nature Communications}. \textit{14}(1), 6988.
+    \DOI{10.1038/s41467-023-42423-y}. [SCI, IF = 16.6].
+\item
     Peng Jia, Yuanyuan Shi, Qi Jiang, \Shaoqing,Bin Yu, Shuhan Yang, Ge Qiu, Shujuan Yang. (2023).
     Environmental determinants of childhood obesity: a meta-analysis.
     \textit{The Lancet Global Health}. \textit{11}, S7.
@@ -141,7 +161,7 @@
     Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
-    \DOI{10.3390/ijerph15102175}. [SSCI, IF = 4.614].
+    \DOI{10.3390/ijerph15102175}. [EI, Citescore = 5.4].
 \item
     \Shaoqing, Huixian Jiang, Jiajia Li, Xian Su, Juan Wu, Yin Ren. (2018).
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
@@ -286,31 +306,21 @@
     \Shaoqing, Alfred Stein, Yuchen Li, Shujuan Yang, Peng Jia.
     Street view imagery for built environment auditing: a systematic review.
     \textit{International Journal of Geographical Information Science}. 
-    (\Revision).
-\item
-    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia.
-    Assessing Spatiotemporal Bikeability Using Multi-Source Geospatial Big Data: A Case Study of Xiamen, China.
-    \textit{International Journal of Applied Earth Observation and Geoinformation}. 
     (\Review).
 \item
     \Shaoqing, Frank Badu Osei, Peng Jia, Alfred Stein.
     Mapping of hourly street-level PM2.5 concentrations using an ensemble-random forest model and multi-source geospatial data.
-    \textit{Environmental Science \& Technology}. 
+    \textit{Environment International}. 
     (\Submitted).
 \item
     Xiaoman Zheng, \Shaoqing, Qi Chen, Kim Calders, Chengdong Xu, Xiaohua Wei, Mazhan Zhuang, Yin Ren.
     Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
-    \textit{}. 
+    \textit{Remote Sensing in Ecology and Conservation}. 
     (\Revision).
 \item
     Peng Jia, Tong Wu, \Shaoqing, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu,  Jing Su, Gordon G. Liu, Shujuan Yang.
     Impacts of and vulnerability to the COVID-19 pandemic.
-    \textit{}. 
+    \textit{Landscape Ecology}. 
     (\Submitted).
-\item
-    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou.
-    Local carbon emission zone construction in the highly urbanized regions: Application of residential and transport CO$_2$ emissions in Shanghai, China.
-    \textit{Building and Environment}. 
-    (\Review).
 %\end{etaremune}
 \end{enumerate}
