--- a/activities.tex
+++ b/activities.tex
@@ -7,4 +7,4 @@
 \mycvitemac{2017-2019}{International Association of Landscape Ecology of China(IALE-China)}{Member}
 \mycvitemac{2016-2017}{Green Bike-Transit}{Volunteer}
 \mycvitemacl{2013-2017}{The Geographical Tribune of Youth}{Founder, Editor in Chief, Associate Editor, Assistant Editor in Chief}
-\mycvitemacl{from 2019}{European Heart Journal, Sustainable Cities and Society, Cities, Frontiers in Public Health, International Journal of Digital Earth, Scientific Reports, Data in Brief, The Journal of Open Source Software, Shanghai Urban Planning Review}{Reviewer}
+\mycvitemacl{from 2019}{European Heart Journal, Sustainable Cities and Society, Cities, Frontiers in Public Health, Frontiers in Environmental Science, International Journal of Digital Earth, Scientific Reports, Data in Brief, The Journal of Open Source Software, Shanghai Urban Planning Review}{Reviewer}
