--- a/cnlatex/activities.tex
+++ b/cnlatex/activities.tex
@@ -7,4 +7,4 @@
 \mycvitemac{2017-2019}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
 \mycvitemac{2016-2017}{拜客绿色出行}{\songti{志愿者}}
 \mycvitemac{2013-2017}{青年地理学刊}{\songti{创刊人,主编,副主编,主编助理}}
-\mycvitemacl{自2019}{European Heart Journal, Sustainable Cities and Society, Cities, Frontiers in Public Health, International Journal of Digital Earth, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划}{\songti{审稿人}}
+\mycvitemacl{自2019}{European Heart Journal, Sustainable Cities and Society, Cities, Frontiers in Public Health,Frontiers in Environmental Science, International Journal of Digital Earth, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划}{\songti{审稿人}}
